# mediasoft_test

./: .gitignore  README.md  makefile  manage.py  pyproject.toml  setup.cfg
mediasoft_test/: .env  .env.example  asgi.py  settings.py  urls.py  wsgi.py
mediasoft_test/shops/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
mediasoft_test/shops/migrations/: 0001_initial.py
